emojivoto/demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emoji-web-ingress
  namespace: emojivoto
  labels:
    app.kubernetes.io/name: emoji-ingress
    app.kubernetes.io/instance: emoji-web
spec:
  ingressClassName: nginx
  rules:
  - host: "emojivoto.127.0.0.1.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
